--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "proton-hook-routers",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,9 @@
   "author": "Nucleos",
   "license": "ISC",
   "dependencies": {
+    "koa-router": "^5.0.0",
     "lodash": "^4.0.0",
-    "proton-hook": "^1.0.0"
+    "proton-hook": "^1.0.0",
+    "require-all": "^2.0.0"
   }
 }
