--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
   "name": "proton-hook-routers",
-  "version": "1.0.2",
+  "version": "2.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha -R spec ./test/*.js",
+    "start": "node index.js"
   },
   "author": "Nucleos",
   "license": "ISC",
   "dependencies": {
-    "koa-router": "^5.0.0",
+    "chai": "^3.5.0",
+    "koa-router": "^7.0.0",
     "lodash": "^4.0.0",
+    "mocha": "^3.2.0",
     "proton-hook": "^1.0.0",
+    "proton-koa": "^3.2.0",
     "require-all": "^2.0.0"
   }
 }
