change the name from hooks to quark

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "proton-hook-routers",
+  "name": "proton-quark-routers",
   "version": "2.0.2",
   "description": "",
   "main": "index.js",
