--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "koa-router": "^7.0.0",
     "lodash": "^4.0.0",
     "mocha": "^3.2.0",
-    "proton-hook": "^1.0.0",
+    "proton-quark": "^2.0.0",
     "proton-koa": "^3.2.0",
     "require-all": "^2.0.0"
   }
